--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ A data custodian is someone who manages your project data. The data custodian fo
 could be yourself or someone from your project.
 Thank you for your time.
 
-<form action="insert.php" method="POST">
+<form name="pl_form" netlify>
 <p>Your CSIRO ident:<input type="text" name="ident">
 <p>WBS&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Data custodians name</p>
 <input type="text" name="wbs1">&emsp;<input type="text" name="name1">
