added paragraph break

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 
 <h1>Ag&F Data custodian form</h1>
 
-The way in which CSIRO manages its data assets is changing. In preparation for this, within Ag&F we
-are looking to learn more about Ag&F data assets and how they are managed.
-To begin this process we are requesting that all Ag&F project leaders to nominate a data custodian for
-all active projects.
-A data custodian is someone who manages your project data. The data custodian for your project
-could be yourself or someone from your project.
-Thank you for your time.
+<p>The way in which CSIRO manages its data assets is changing. In preparation for this, within Ag&F we
+are looking to learn more about Ag&F data assets and how they are managed.</p>
+<p>To begin this process we are requesting that all Ag&F project leaders to nominate a data custodian for
+all active projects.</p>
+<p>A data custodian is someone who manages your project data. The data custodian for your project
+could be yourself or someone from your project.</p>
+<p>Thank you for your time.</p>
 
 <form action="insert.php" method="POST">
 <p>Your CSIRO ident:<input type="text" name="ident">
