made ident and  1set of wbs dc name a required item

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@ could be yourself or someone from your project.</p>
 <p>THANK YOU FOR YOUR TIME!</p>
 
 <form name="pl_form" netlify>
-<p><h1>Your details:</h1></p>
-<p>Your CSIRO ident:&emsp;<input type="text" name="ident"></p>
+<p><h2>Your details:</h2></p>
+<p>Your CSIRO ident:&emsp;<input type="text" name="ident" required></p>
 <p><br></p>
-<p><h1>Project and Data custodian's details:</h1></p>
+<p><h2>Project and Data custodian's details:</h2></p>
 <table>
-    <tr><td>S no.</td><td>WBS code</td><td>Data custodian name</td></tr>
+    <tr><td><b>S no.</b></td><td><b>WBS code</b></td><td><b>Data custodian name<b></td></tr>
     
     <tr><td>1</td>
-    <td><input type='text' name="wbs1"></td>
-    <td><input type='text' name='name1'></td></tr>
+    <td><input type='text' name="wbs1" required></td>
+    <td><input type='text' name='name1' required></td></tr>
     
     <tr><td>2</td>
     <td><input type='text' name="wbs2"></td>
