formatting and description changes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 
 <body>
 
-<h1><b>AF Data custodian form</h1>
+<h1><b>AF Data custodian form</b></h1>
+
+<font size =3>
 
 <p>The way in which CSIRO manages its data assets is changing. In preparation for this, within Ag&F we
 are looking to learn more about Ag&F data assets and how they are managed.</p>
@@ -10,13 +12,16 @@ are looking to learn more about Ag&F data assets and how they are managed.</p>
 all active projects.</p>
 <p>A data custodian is someone who manages your project data. The data custodian for your project
 could be yourself or someone from your project.</p>
-<p>THANK YOU FOR YOUR TIME!</p>
+
+</font>
+
+<p><b>THANK YOU FOR YOUR TIME!</b></p>
 
 <form name="pl_form" netlify>
 <p><h2>Your details:</h2></p>
 <p>Your CSIRO ident:&emsp;<input type="text" name="ident" required></p>
 <p><br></p>
-<p><h2>Project and Data custodian's details:</h2></p>
+<p><h2>Project wbs and data custodian's names:</h2></p>
 <table>
     <tr><td><b>S no.</b></td><td><b>WBS code</b></td><td><b>Data custodian name<b></td></tr>
     
