--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <p>The way in which CSIRO manages its data assets is changing. In preparation for this, within Ag&F we
 are looking to learn more about Ag&F data assets and how they are managed.</p>
-<p>To begin this process we are requesting that all Ag&F project leaders to nominate a data custodian for
+<p>To begin this process we are requesting all Ag&F project leaders to nominate a data custodian for
 all active projects.</p>
 <p>A data custodian is someone who manages your project data. The data custodian for your project
 could be yourself or someone from your project.</p>
