--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 
-<body style="background-color:lightgrey;">
+<body style="background-color:LightSteelBlue;">
 
 <h1><b>AF Data custodian form</b></h1>
 
