--- a/index.html
+++ b/index.html
@@ -1,21 +1,45 @@
 <html>
 
-<body style="background-color:AliceBlue;">
+<head>
+
+<style>
+
+body {
+
+background-color:white;
+
+}
+
+h1 {
+
+background-color:teal;
+
+}
+
+</style>
+
+
+</head>
+
+<body>
+
+<font size =3 face = calibri>
 
 <h1><b>AF Data custodian form</b></h1>
 
-<font size =3>
+<p><h4>The way in which CSIRO manages its data assets is changing. In preparation for this, within Ag&F we
+are looking to learn more about Ag&F data assets and how they are managed.</h4></p>
 
-<p>The way in which CSIRO manages its data assets is changing. In preparation for this, within Ag&F we
-are looking to learn more about Ag&F data assets and how they are managed.</p>
+<hr>
+
 <p>To begin this process we are requesting all Ag&F project leaders to nominate a data custodian for
 all active projects.</p>
 <p>A data custodian is someone who manages your project data. The data custodian for your project
 could be yourself or someone from your project.</p>
 
-</font>
-
 <p><b>THANK YOU FOR YOUR TIME!</b></p>
+
+<hr>
 
 <form name="pl_form" netlify>
 <p><h2>Your details:</h2></p>
@@ -55,8 +79,11 @@ required></p>
     
 </table>
 
-<p><input type="submit" value="Submit"><input type="reset" value="Clear">
+<br>
 
+<input type="submit" value="Submit">
+
+</font>
 
 </form>
 
